#88 introduce generic traversal